<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_main"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">
        <ImageView
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:src="@drawable/image11"
                android:id="@+id/imageView"
                android:layout_marginStart="10dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:textColor="@android:color/white"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_15"
                        android:id="@+id/imageView2"
                        android:layout_marginStart="10dp"/>
            </LinearLayout>
            <TextView
                    android:text="2014.07.23 개봉"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textColor="@android:color/white"/>
            <TextView
                    android:text="액션 /137분"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textColor="@android:color/white"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/button4"
                        android:background="@drawable/thumb_up"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="5dp"/>
                <TextView
                        android:text="15"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView22"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"/>
                <Button
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:id="@+id/button5"
                        android:background="@drawable/thumb_down"/>
                <TextView
                        android:text="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView23"
                        android:layout_margin="5dp"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:layout_marginEnd="2dp">
            <TextView
                    android:text="@string/movie_reser_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView16"
                    android:textAlignment="center"
                    android:padding="2dp"
                    android:textSize="@dimen/text_content"/>
            <TextView
                    android:text="5위 1.8%"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_content"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:layout_marginEnd="2dp">
            <TextView
                    android:text="@string/movie_rate"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView18"
                    android:textAlignment="center"
                    android:padding="2dp"
                    android:textSize="@dimen/text_content"/>
            <LinearLayout
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textAlignment="center">
                <RatingBar
                        android:id="@+id/ratingbar1"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="0.5"
                        android:rating="3.5"/>
                <TextView
                        android:text="8.2"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView24"
                        android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center">
            <TextView
                    android:text="@string/movie_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView19" android:textAlignment="center"
                    android:padding="2dp"
                    android:textSize="@dimen/text_content"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView20"
                    android:text="839,399명"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
        <TextView
                android:text="@string/movie_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="@dimen/text_title"
                android:textStyle="normal|bold"
                android:textColor="@android:color/black"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"/>
        <TextView
                android:text="@string/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:paddingTop="5dp"
                android:textSize="@dimen/text_content"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white">
        <TextView
                android:text="@string/movie_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:textStyle="bold"
                android:textSize="@dimen/text_title"
                android:textColor="@android:color/black"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/movie_director"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView13"
                    android:textAlignment="textStart"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/text_content"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="윤종빈"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    android:layout_weight="4"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/text_content"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/movie_actors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/text_content"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="하정우(도치), 강동원(조윤)"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:layout_weight="4"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/text_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:padding="10dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/movie_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_title"
                    android:textColor="@android:color/black"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:layout_alignParentEnd="true"
                    android:text="@string/movie_comment_write"
                    android:drawableStart="@drawable/ic_review_selected"
                    android:background="#00000000"
                    android:drawablePadding="5dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_content"
                    android:textColor="@android:color/holo_orange_dark"/>
        </RelativeLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="300dp">
        </LinearLayout>
        <Button
                android:text="@string/comment_every_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:background="@drawable/linear_border_orange"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@android:color/holo_purple"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp">
        <ImageButton
                android:layout_width="wrap_content"
                android:src="@drawable/ic_facebook"
                android:id="@+id/imageButton"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="#00000000"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_kakao"
                android:id="@+id/imageButton2"
                android:layout_weight="1"
                android:background="#00000000"/>
        <Button
                android:text="@string/reservation_btn"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_weight="2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_background"
                android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>